<resources>
    <string name="app_name">MovieZone</string>
    <string name="content_authority">app.com.example.althomas04.moviezone</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_about">About</string>
    <!--
        By convention, "action" denotes that this String will be used as the label for an Action,
        typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
   -->
    <string name="action_sort_by">Sort By</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_top_rated">Top Rated</string>
    <string name="action_most_popular">Most Popular</string>
    <string name="action_now_playing">Now Playing</string>
    <string name="action_upcoming">Upcoming</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>

    <!-- Detail fragment strings -->
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Rating</string>
    <string name="plot_overview">Plot Overview</string>
    <string name="trailer">Trailer</string>
    <string name="reviews">Reviews</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string name="version_name">Version</string>
    <string name="powered_by">Powered by</string>
    <string name="api_link">themoviedb.org</string>
    <string name="contact_support"><u>Contact Support</u></string>
    <string name="contact_email_subject">Movie Zone - App Support Request</string>
    <string name="contact_email_body">Please describe any concerns with as much details as possible, thank you.</string>
    <string name="no_movies">No Movies Found</string>
    <string name="action_favorite_button">Favorite</string>
    <string name="genre_title">Genre:</string>
    <string name="language_title">Language:</string>
    <string name="runtime_title">Runtime:</string>
    <string name="no_trailer">No trailer found.</string>
    <string name="no_reviews">No reviews found.</string>
    <string name="see_more">...see more.</string>
    <string name="see_less">...see less.</string>


</resources>
