<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:title="@string/action_sort_by"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_most_popular"
                android:title="@string/action_most_popular" />
            <item
                android:id="@+id/action_top_rated"
                android:title="@string/action_top_rated" />
            <item
                android:id="@+id/action_now_playing"
                android:title="@string/action_now_playing" />
            <item
                android:id="@+id/action_upcoming"
                android:title="@string/action_upcoming" />
            <item
                android:id="@+id/action_favorites"
                android:title="@string/action_favorites" />
        </menu>
    </item>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>