<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="24dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <RelativeLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/rating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_rating"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating_title"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="5"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vote_average"
                android:textColor="@android:color/darker_gray"
                tools:text="256" />

            <TextView
                android:id="@+id/release_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignRight="@+id/rating_title"
                android:text="@string/release_date"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/release_title"
                android:textColor="@android:color/darker_gray"
                tools:text="Oct 16, 2015" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <!--    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_rating"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleSmall"
                    android:secondaryProgressTint="@android:color/black"
                    android:numStars="5"
                    android:stepSize="0.5"/>

                <TextView
                    android:id="@+id/vote_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    tools:text="256" />

            </LinearLayout>

        </android.support.v7.widget.CardView>-->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plot_overview"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plot_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                tools:text="8.34/10" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!--<ProgressBar
        android:id="@+id/progressBarMovieDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_trailer_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:visibility="gone">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trailer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailer"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/trailers_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:visibility="gone"
                tools:ignore="RtlHardcoded,RtlSymmetry">

                <LinearLayout
                    android:id="@+id/viewGroupTrailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipChildren="false"
                    android:orientation="horizontal"
                    android:showDividers="middle" />

            </HorizontalScrollView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_comment_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:visibility="gone">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/review_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/viewGroupReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical" />

        </LinearLayout>

    </android.support.v7.widget.CardView>-->

</LinearLayout>